# rl-vanet

./: readme.md
agent/: agent.py  continous_dqn_agent.py  dqn_dual_continous.py  ppo_dual_continous.py  test_baseline.py  test_model.py
less_vehicles_sumo_40/: build.bat  edgeData.xml  ns2mobility.tcl  osm.netccfg  osm.passenger.trips.xml  osm.polycfg  osm.sumocfg  output.add.xml  stats.xml  tripinfos.xml
scratch/v2x/: CMakeLists.txt  rl-interface.cc  rl-interface.h  v2x.cc  v2x_gauss_markow.cc  v2x_original_with_agent_communication.cc  v2x_windowed_metrices_gauss.cc  vanet-with-simple-simulation-and-new-pdr-formula.cc  vanet_base.cc  vanet_metrics_collection_working.cc  vanet_rl_with_communication_working.cc  vanet_rl_with_sumo.cc
server/agent/: DQN_REPORT_SECTION.md  README_PPO.md  TESTING_README.md  agent.py  baseline.py  dqn_agent.py  dqn_dual_continuous.py  dqn_simple_continuous.py  ppo_agent.py  ppo_dual_continuous.py  requirements.txt  test_baseline.py  test_model.py
server/agent/models/: dqn_continuous_final_20251107_081205.pth  dqn_continuous_final_20251107_081227.pth  dqn_continuous_final_20251107_102621.pth  dqn_continuous_final_20251107_103237.pth  dqn_continuous_final_20251107_104421.pth  dqn_continuous_final_20251107_105407.pth  dqn_continuous_final_20251107_105519.pth  dqn_continuous_final_20251107_105553.pth  (+1043 more)
sumo/: build.bat  edgeData.xml  osm.netccfg  osm.passenger.trips.xml  osm.polycfg  osm.sumocfg  osm_pt.rou.xml  osm_ptlines.xml  osm_stops.add.xml  output.add.xml  stats.xml  stopinfos.xml  tripinfos.xml  trips.trips.xml  vehroutes.xml
(+1 files in other folders)
